--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Receitas de vó</title>
       <link rel="icon" type="image/x-icon" href="imgs/281d3e70c4e0d116d9df114505f2a249.jpg">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
   </head>
   <body id="tudo">
