--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <h3 id="texto2">Agora que já sabemos um pouco da história, podemos ir para a receita</h3>
        <h1 id="ingredientes"> <strong>INGREDIENTES:</strong> </h1>
     <ol id="ingredientes2">
-        <li> 1 xícara de leite quente;</li>
-    <li> 2 xícaras de açúcar;</li>
-    <li> 3 claras em neve;</li>
-    <li> 3 xícaras de farinha de trigo;</li>
-    <li> 3 gemas;</li>
-    <li> 1 colher de fermento em pó químico;</li>
+        <li> Leite quente (1 xícara);</li>
+    <li> Açúcar (2 xícaras);</li>
+    <li> Claras em neve (3);</li>
+    <li> Farinha de trigo ( 3 xícaras );</li>
+    <li> Gemas (3);</li>
+    <li> Fermento em pó químico (1 colher );</li>
     </ol>
     <h1 id="instruções"> <strong>INSTRUÇÕES:</strong> </h1>
       <ol id="instruções2">
